# qt_exchange

./: CMakeLists.txt
admin/: CMakeLists.txt  main.cpp
admin/ui/: AdminWindow.cpp  AdminWindow.h  AdminWindow.ui  LoginDialog.cpp  LoginDialog.h
admin/widgets/: CurrenciesWidget.cpp  CurrenciesWidget.h  CurrenciesWidget.ui  RequestsAdminWidget.cpp  RequestsAdminWidget.h  RequestsAdminWidget.ui  UsersWidget.cpp  UsersWidget.h  UsersWidget.ui
client/: CMakeLists.txt  main.cpp
client/ui/: LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
client/widgets/: ExchangeWidget.cpp  ExchangeWidget.h  ExchangeWidget.ui  ProfileWidget.cpp  ProfileWidget.h  ProfileWidget.ui  RequestsWidget.cpp  RequestsWidget.h  RequestsWidget.ui
common/: CMakeLists.txt
common/database/: DatabaseManager.cpp  DatabaseManager.h
common/models/: CurrencyModel.cpp  CurrencyModel.h
common/services/: AuthService.cpp  AuthService.h
resources/: icons.qrc
